# ComfyUI_YOLO_Classifiers

./: .gitignore  __init__.py  classifiers.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
